--- a/docstrings/numerical_simulation/environment_setup/gravity_field.yaml
+++ b/docstrings/numerical_simulation/environment_setup/gravity_field.yaml
@@ -373,9 +373,7 @@ classes:
           - name: None # [cpp]
         returns: # [cpp]
           type: Eigen::MatrixXd # [cpp]
-          description: |
-            Cartesian coordinates of each polyhedron vertex. Entry (i,j) denotes vertex i, coordinate j (one
-            row per vertex, 3 columns). # [cpp]
+          description: Cartesian coordinates of each polyhedron vertex. Entry (i,j) denotes vertex i, coordinate j (one row per vertex, 3 columns). # [cpp]
 
       - name: resetVerticesCoordinates # [cpp]
         short_summary: "Reset vertices coordinates." # [cpp]
@@ -383,9 +381,7 @@ classes:
         parameters: # [cpp]
           - name: verticesCoordinates # [cpp]
             type: Eigen::MatrixXd # [cpp]
-            description: |
-              Cartesian coordinates of each polyhedron vertex. Entry (i,j) denotes vertex i, coordinate j (one
-              row per vertex, 3 columns). # [cpp]
+            description: Cartesian coordinates of each polyhedron vertex. Entry (i,j) denotes vertex i, coordinate j (one row per vertex, 3 columns). # [cpp]
 
       - name: getVerticesDefiningEachFacet # [cpp]
         short_summary: "Retrieve vertices defining each facet." # [cpp]
@@ -394,10 +390,7 @@ classes:
           - name: None # [cpp]
         returns: # [cpp]
           type: Eigen::MatrixXi # [cpp]
-          description: |
-            Index (0 based) of the vertices constituting each facet. Entry (i,j) denotes facet i, and the jth vertex of
-            the facet (one row per facet, 3 columns). In each row, the vertices' indices should be ordered counterclockwise
-            when seen from the outside of the polyhedron. # [cpp]
+          description: Index (0 based) of the vertices constituting each facet. Entry (i,j) denotes facet i, and the jth vertex of the facet (one row per facet, 3 columns).  # [cpp]
 
       - name: resetVerticesDefiningEachFacet # [cpp]
         short_summary: "Reset vertices defining each facet." # [cpp]
@@ -405,10 +398,10 @@ classes:
         parameters: # [cpp]
           - name: verticesDefiningEachFacet # [cpp]
             type: Eigen::MatrixXi # [cpp]
-            description: |
-              Index (0 based) of the vertices constituting each facet. Entry (i,j) denotes facet i, and the jth vertex of
-              the facet (one row per facet, 3 columns). In each row, the vertices' indices should be ordered counterclockwise
-              when seen from the outside of the polyhedron. # [cpp]
+            description: | # [cpp]
+              Index (0 based) of the vertices constituting each facet. Entry (i,j) denotes facet i, and the jth # [cpp]
+              vertex of the facet (one row per facet, 3 columns). In each row, the vertices' indices should be ordered # [cpp]
+              counterclockwise when seen from the outside of the polyhedron. # [cpp]
 
   #######################################################################
 
