:Added shape deformation and ground station docstrings

--- a/docstrings/numerical_simulation/environment_setup/__package__.yaml
+++ b/docstrings/numerical_simulation/environment_setup/__package__.yaml
@@ -20,10 +20,11 @@ modules:
   - ephemeris
   - gravity_field
   - gravity_field_variation
+  - ground_station
   - radiation_pressure
   - rotation_model
   - shape
-
+  - shape_deformation
 
   #########################################################################
   #  ███████ ███   ██ ██    ██ ███    ███  ██████
