--- a/docstrings/numerical_simulation/environment_setup/ground_station.yaml
+++ b/docstrings/numerical_simulation/environment_setup/ground_station.yaml
@@ -90,9 +90,10 @@ functions:
       - name: station_nominal_position # [py]
         type: np.ndarray([3,1]) # [py]
         description: Nominal position of the station in a body-fixed frame. Depending on the choice of ``station_position_element_type`` input, this vector must contain
-          * Cartesian - $[x,y,z]$, denoting $x-$, $y-$ and $z-$ components of body-fixed position (w.r.t body-fixed frame origin, typically center of mass)
-          * Spherical - $[r,\phi',\theta]$, denoting distance from body-fixed frame origin (typically center of mass), latitude and longitude
-          * Geodetic - $[h,\phi,\theta]$, denoting the altitude w.r.t. the body shape model, geodetic latitude and longitude
+          
+          * Cartesian - :math:`[x,y,z]`, denoting :math:`x-`, :math:`y-` and :math:`z-` components of body-fixed position (w.r.t body-fixed frame origin, typically center of mass)
+          * Spherical - :math:`[r,\phi',\theta]`, denoting distance from body-fixed frame origin (typically center of mass), latitude and longitude
+          * Geodetic - :math:`[h,\phi,\theta]`, denoting the altitude w.r.t. the body shape model, geodetic latitude and longitude
 
       - name: station_position_element_type # [py]
         type: PositionElementTypes, default = cartesian_position # [py]
@@ -107,18 +108,24 @@ functions:
         type: GroundStationSettings
         description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.shape.GroundStationSettings` defining settings of the to be created ground station
 
-
     examples: |
-      In this example, we create a station using geodetic coordinates at the approximat location of the city of Delft, and no motion settings:
+      In this example, we create a station using geodetic coordinates at the approximate location of the city of Delft, and no motion settings:
 
       .. code-block:: python  # [py]
-         ground_station_settings = environment_setup.ground_station.basic_station( # [py]
-             "TrackingStation", # [py]
-              [station_altitude, delft_latitude, delft_longitude], # [py]
-              element_conversion.geodetic_position_type) # [py]
-         # [py]
-         # Append station settings to existing (default is empty) list # [py]
-         body_settings.get( "Earth" ).ground_station_settings.append( ground_station_settings ) # [py]
+
+        # Define the position of the ground station on Earth # [py]
+        station_altitude = 0.0 # [py]
+        delft_latitude = np.deg2rad(52.00667) # [py]
+        delft_longitude = np.deg2rad(4.35556) # [py]
+        # [py]
+        # Create ground station settings
+        ground_station_settings = environment_setup.ground_station.basic_station( # [py]
+            "TrackingStation", # [py]
+             [station_altitude, delft_latitude, delft_longitude], # [py]
+             element_conversion.geodetic_position_type) # [py]
+        # [py]
+        # Append station settings to existing (default is empty) list # [py]
+        		body_settings.get( "Earth" ).ground_station_settings.append( ground_station_settings ) # [py]
 
 
  
@@ -150,7 +157,7 @@ functions:
     short_summary: "Factory function for creating settings for a piecewise constant ground station position variation"
     extended_summary: |
       Factory function for creating settings for a piecewise constant ground station position. Using this model, the added station velocity in a body-fixed frame :math:`\dot{\mathbf{r}}` is
-      always zero, but its displacement :math`\Delta\mathbf{r}` is set according to the input list, which contains a list of times and displacments :math:`[t_{i},\Delta\mathbf{r}_{i}]`. 
+      always zero, but its displacement :math:`\Delta\mathbf{r}` is set according to the input list, which contains a list of times and displacments :math:`[t_{i},\Delta\mathbf{r}_{i}]`. 
       When the resulting model is queried at a given time :math:`t`, the nearest lower neighbour :math:`t_{i}` from this list is found, and the associated :math:`\Delta\mathbf{r}_{i}` is applied.
 
     parameters:
